# mirrorsync

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
mirrorsync/: __main__.py  cli.py  client.py  config.py  server.py
